package com.xiaoma.studyretrofit.proxy;

public interface ICustomer {

    void buyMac();
}
