@startuml

title __PROXY's Class Diagram__\n

  namespace com.xiaoma {
    namespace studyretrofit {
      namespace proxy {
        class com.xiaoma.studyretrofit.proxy.DynamicProxy {
            + DynamicProxy()
            + invoke()
        }
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyretrofit {
      namespace proxy {
        interface com.xiaoma.studyretrofit.proxy.ICustomer {
            {abstract} + buyMac()
        }
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyretrofit {
      namespace proxy {
        class com.xiaoma.studyretrofit.proxy.ProxyBuy {
            + ProxyBuy()
            + buyMac()
        }
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyretrofit {
      namespace proxy {
        class com.xiaoma.studyretrofit.proxy.ProxyUtil {
            {static} - cacheMethod : Map<Method, String>
            {static} + create()
            {static} - getParameters()
            {static} - getRequestType()
        }
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyretrofit {
      namespace proxy {
        class com.xiaoma.studyretrofit.proxy.RunningResult {
            {static} + main()
        }
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyretrofit {
      namespace proxy {
        class com.xiaoma.studyretrofit.proxy.XiaoMingBuy {
            + buyMac()
        }
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyretrofit {
      namespace proxy {
        class com.xiaoma.studyretrofit.proxy.ZhangSanBuy {
            + buyMac()
        }
      }
    }
  }
  

  com.xiaoma.studyretrofit.proxy.DynamicProxy .up.|> java.lang.reflect.InvocationHandler
  com.xiaoma.studyretrofit.proxy.DynamicProxy o-- com.xiaoma.studyretrofit.proxy.ICustomer : customer
  com.xiaoma.studyretrofit.proxy.ProxyBuy .up.|> com.xiaoma.studyretrofit.proxy.ICustomer
  com.xiaoma.studyretrofit.proxy.ProxyBuy o-- com.xiaoma.studyretrofit.proxy.ICustomer : customer
  com.xiaoma.studyretrofit.proxy.XiaoMingBuy .up.|> com.xiaoma.studyretrofit.proxy.ICustomer
  com.xiaoma.studyretrofit.proxy.ZhangSanBuy .up.|> com.xiaoma.studyretrofit.proxy.ICustomer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
